--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
                 android:layout_height="4dp"
                 android:background="@drawable/shadow"/>
 
-        <android.support.design.widget.BottomNavigationView
+        <com.google.android.material.bottomnavigation.BottomNavigationView
                 android:id="@id/navigation"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
