--- a/app/src/main/res/layout/content_list_match.xml
+++ b/app/src/main/res/layout/content_list_match.xml
@@ -19,7 +19,7 @@
  * 
  -->
 
-<android.support.v7.widget.CardView
+<androidx.cardview.widget.CardView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
@@ -106,4 +106,4 @@
     </LinearLayout>
 
 
-</android.support.v7.widget.CardView>
+</androidx.cardview.widget.CardView>
