--- a/app/src/main/res/layout/content_list_player.xml
+++ b/app/src/main/res/layout/content_list_player.xml
@@ -18,7 +18,7 @@
  * id.amirisback.frogobox
  * 
  -->
-<android.support.v7.widget.CardView
+<androidx.cardview.widget.CardView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
@@ -59,4 +59,4 @@
                 android:textStyle="italic"/>
 
     </LinearLayout>
-</android.support.v7.widget.CardView>
+</androidx.cardview.widget.CardView>
