--- a/app/src/main/res/layout/content_list_team.xml
+++ b/app/src/main/res/layout/content_list_team.xml
@@ -19,7 +19,7 @@
  * 
  -->
 
-<android.support.v7.widget.CardView
+<androidx.cardview.widget.CardView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
@@ -48,4 +48,4 @@
                 android:layout_marginLeft="@dimen/small"
                 android:layout_gravity="center_vertical"/>
     </LinearLayout>
-</android.support.v7.widget.CardView>
+</androidx.cardview.widget.CardView>
