--- a/app/src/main/res/layout/fragment_favorite_home.xml
+++ b/app/src/main/res/layout/fragment_favorite_home.xml
@@ -6,7 +6,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <android.support.design.widget.TabLayout
+    <com.google.android.material.tabs.TabLayout
             android:id="@id/tablayout_favorite"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -14,10 +14,10 @@
             app:tabTextColor="@color/textGrey"
             app:tabSelectedTextColor="@color/textWhite"/>
 
-    <android.support.v4.view.ViewPager
+    <androidx.viewpager.widget.ViewPager
             android:id="@id/viewpager_favorite"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-    </android.support.v4.view.ViewPager>
+    </androidx.viewpager.widget.ViewPager>
 </LinearLayout>
