--- a/app/src/main/res/layout/fragment_match_home.xml
+++ b/app/src/main/res/layout/fragment_match_home.xml
@@ -7,7 +7,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <android.support.design.widget.TabLayout
+    <com.google.android.material.tabs.TabLayout
             android:id="@id/tablayout_match"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -15,10 +15,10 @@
             app:tabTextColor="@color/textGrey"
             app:tabSelectedTextColor="@color/textWhite"/>
 
-    <android.support.v4.view.ViewPager
+    <androidx.viewpager.widget.ViewPager
             android:id="@id/viewpager_match"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-    </android.support.v4.view.ViewPager>
+    </androidx.viewpager.widget.ViewPager>
 </LinearLayout>
