--- a/app/src/main/res/layout/fragment_team_home.xml
+++ b/app/src/main/res/layout/fragment_team_home.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.SwipeRefreshLayout
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
@@ -17,7 +17,7 @@
                 android:layout_margin="@dimen/small">
         </Spinner>
 
-        <android.support.v7.widget.RecyclerView
+        <androidx.recyclerview.widget.RecyclerView
                 android:layout_below="@id/spinner_team"
                 android:id="@id/recyclerView_team"
                 android:layout_width="match_parent"
@@ -31,4 +31,4 @@
                 android:layout_height="wrap_content" />
     </RelativeLayout>
 
-</android.support.v4.widget.SwipeRefreshLayout>
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
