update: refactoring code

--- a/app/src/main/res/menu/menu_navigation.xml
+++ b/app/src/main/res/menu/menu_navigation.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item
-        android:id="@+id/navigation_match"
-        android:icon="@drawable/ic_navigation_prev_match"
-        android:title="@string/bottom_match" />
+<!--    <item-->
+<!--        android:id="@+id/navigation_match"-->
+<!--        android:icon="@drawable/ic_navigation_prev_match"-->
+<!--        android:title="@string/bottom_match" />-->
 
     <item
         android:id="@+id/navigation_team"
