--- a/app/src/main/res/layout/activity_team_search.xml
+++ b/app/src/main/res/layout/activity_team_search.xml
@@ -1,82 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".views.activities.SearchTeamActivity">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".mvp.search.SearchTeamActivity">
 
     <TextView
-            android:id="@id/textview_searchteam_null"
-            android:layout_centerInParent="true"
-            android:layout_width="match_parent"
-            android:text="@string/matchesNotFound"
-            android:textAlignment="center"
-            android:layout_height="wrap_content"/>
+        android:id="@id/textview_searchteam_null"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="@string/matchesNotFound"
+        android:textAlignment="center" />
 
     <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
         <com.google.android.material.appbar.AppBarLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
             <androidx.appcompat.widget.Toolbar
-                    android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    android:background="@color/colorPrimary">
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="@color/colorPrimary">
+
                 <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_marginBottom="4dp"
+                    android:orientation="horizontal">
+
+                    <androidx.cardview.widget.CardView
+                        android:id="@id/cardview_searchteam_back"
+                        android:layout_width="48dp"
+                        android:layout_height="match_parent"
                         android:layout_marginTop="4dp"
+                        android:layout_marginEnd="4dp"
+                        android:layout_marginRight="4dp"
                         android:layout_marginBottom="4dp"
-                        android:layout_marginLeft="8dp"
-                        android:layout_marginRight="8dp"
-                        android:orientation="horizontal"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-                    <androidx.cardview.widget.CardView
-                            android:layout_marginTop="4dp"
-                            android:layout_marginBottom="4dp"
-                            android:layout_marginRight="4dp"
-                            android:id="@id/cardview_searchteam_back"
-                            android:layout_width="48dp"
-                            android:layout_height="match_parent"
-                            android:clickable="true"
-                            app:cardBackgroundColor="@color/colorPrimary"
-                            android:foreground="?android:attr/selectableItemBackground"
-                            android:focusable="true"
-                            android:layout_marginEnd="4dp">
+                        android:clickable="true"
+                        android:focusable="true"
+                        android:foreground="?android:attr/selectableItemBackground"
+                        app:cardBackgroundColor="@color/colorPrimary">
+
                         <ImageView
-                                android:layout_margin="8dp"
-                                app:srcCompat="@drawable/ic_arrow_back"
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"/>
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_margin="8dp"
+                            app:srcCompat="@drawable/ic_arrow_back" />
                     </androidx.cardview.widget.CardView>
+
                     <EditText
-                            android:id="@id/edittext_searchteam"
-                            android:layout_width="0dp"
-                            android:layout_weight="1"
-                            android:layout_height="match_parent"
-                            android:hint="Search"
-                            style="@style/editTextEmpty"
-                            android:textSize="18sp"/>
+                        android:id="@id/edittext_searchteam"
+                        style="@style/editTextEmpty"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:hint="Search"
+                        android:textSize="18sp" />
 
                     <androidx.cardview.widget.CardView
-                            android:layout_margin="4dp"
-                            android:id="@id/cardview_searchteam_remove"
-                            android:layout_width="48dp"
-                            android:layout_height="match_parent"
-                            android:clickable="true"
-                            app:cardElevation="0dp"
-                            app:cardBackgroundColor="@color/colorPrimary"
-                            android:foreground="?android:attr/selectableItemBackground"
-                            android:focusable="true">
+                        android:id="@id/cardview_searchteam_remove"
+                        android:layout_width="48dp"
+                        android:layout_height="match_parent"
+                        android:layout_margin="4dp"
+                        android:clickable="true"
+                        android:focusable="true"
+                        android:foreground="?android:attr/selectableItemBackground"
+                        app:cardBackgroundColor="@color/colorPrimary"
+                        app:cardElevation="0dp">
 
                         <ImageView
-                                android:layout_margin="8dp"
-                                app:srcCompat="@drawable/ic_close"
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"/>
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_margin="8dp"
+                            app:srcCompat="@drawable/ic_close" />
                     </androidx.cardview.widget.CardView>
                 </LinearLayout>
             </androidx.appcompat.widget.Toolbar>
@@ -84,17 +89,17 @@
         </com.google.android.material.appbar.AppBarLayout>
 
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-                android:id="@id/swiperefresh_searchteam"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+            android:id="@id/swiperefresh_searchteam"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
             <androidx.recyclerview.widget.RecyclerView
-                    android:layout_marginTop="16dp"
-                    android:id="@id/recyclerview_searchteam"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    tools:listitem="@layout/content_list_team">
-            </androidx.recyclerview.widget.RecyclerView>
+                android:id="@id/recyclerview_searchteam"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingTop="16dp"
+                android:paddingRight="16dp"
+                tools:listitem="@layout/content_list_team" />
 
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
