--- a/app/src/main/res/layout/content_list_team_grid.xml
+++ b/app/src/main/res/layout/content_list_team_grid.xml
@@ -19,35 +19,35 @@
  * 
  -->
 
-<androidx.cardview.widget.CardView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="wrap_content"
-        android:layout_margin="@dimen/small"
-        android:layout_height="wrap_content">
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="16dp"
+    android:layout_marginBottom="16dp">
+
     <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/small"
-            android:gravity="center">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:gravity="center"
+        android:orientation="vertical">
 
         <ImageView
-                android:id="@id/imageview_team_list_badge"
-                android:layout_width="@dimen/imageSizeBadgeGrid"
-                android:layout_height="@dimen/imageSizeBadgeGrid"
-                tools:src="@mipmap/ic_launcher"/>
+            android:id="@id/imageview_team_list_badge"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/imageSizeBadgeGrid"
+            tools:src="@mipmap/ic_launcher" />
 
         <TextView
-                android:id="@id/textview_team_list_name"
-                android:layout_width="@dimen/imageSizeBadgeGrid"
-                android:layout_height="@dimen/primary"
-                tools:text="@string/favorite"
-                android:textAlignment="center"
-                android:maxHeight="@dimen/primary"
-                android:textColor="@color/textBlack"
-                android:textSize="@dimen/textSizeBadgeGrid"
-                android:layout_gravity="center_vertical"/>
+            android:id="@id/textview_team_list_name"
+            android:layout_width="@dimen/imageSizeBadgeGrid"
+            android:layout_height="@dimen/primary"
+            android:layout_gravity="center"
+            android:maxHeight="@dimen/primary"
+            android:textAlignment="center"
+            android:textColor="@color/textBlack"
+            android:textSize="@dimen/textSizeBadgeGrid"
+            tools:text="@string/favorite" />
     </LinearLayout>
 </androidx.cardview.widget.CardView>
