--- a/app/src/main/res/layout/fragment_team_home.xml
+++ b/app/src/main/res/layout/fragment_team_home.xml
@@ -1,34 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@id/swipeRefresh_team">
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@id/swipeRefresh_team"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <Spinner
-                android:id="@id/spinner_team"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_margin="@dimen/small">
-        </Spinner>
+            android:id="@id/spinner_team"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_margin="@dimen/small" />
 
         <androidx.recyclerview.widget.RecyclerView
-                android:layout_below="@id/spinner_team"
-                android:id="@id/recyclerView_team"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                tools:listitem="@layout/content_list_team" />
+            android:id="@id/recyclerView_team"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/spinner_team"
+            android:clipToPadding="false"
+            android:paddingTop="16dp"
+            android:paddingRight="16dp"
+            tools:listitem="@layout/content_list_team" />
 
         <ProgressBar
-                android:id="@id/progressBar_team"
-                android:layout_centerInParent="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+            android:id="@id/progressBar_team"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true" />
     </RelativeLayout>
 
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
