--- a/app/src/main/res/layout/fragment_team_overview.xml
+++ b/app/src/main/res/layout/fragment_team_overview.xml
@@ -3,7 +3,7 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context=".views.fragments.TeamOverviewFragment">
+             tools:context=".mvp.team.TeamOverviewFragment">
 
     <TextView
             android:layout_margin="@dimen/primary"
