update: refactoring code

--- a/app/src/main/res/layout/activity_team_search.xml
+++ b/app/src/main/res/layout/activity_team_search.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".mvp.search.SearchTeamActivity">
+    tools:context=".mvp.team.TeamSearchActivity">
 
     <TextView
         android:id="@id/textview_searchteam_null"
